[package]
authors = ["Robin Kruppe <robin.kruppe@gmail.com>"]
description = "Watertight ray-triangle intersection following the paper by Woop, Benthin, and Wald."
license = "MIT/Apache-2.0"
name = "watertri"
readme = "README.md"
repository = "https://github.com/rkruppe/watertri.rs"
version = "0.1.0"

[dependencies]
cgmath = "0.12.0"
